Edit Form Created

--- a/client/src/features/members/member-detailed/member-detailed.html
+++ b/client/src/features/members/member-detailed/member-detailed.html
@@ -36,7 +36,7 @@
                 {
                     <button
                         (click)="memberService.editMode.set(!memberService.editMode())" 
-                        class="btn btn-outline btn-primary">{{ memberService.editMode() ? 'Cancel' : 'Edt'}}</button>
+                        class="btn btn-outline btn-primary">{{ memberService.editMode() ? 'Cancel' : 'Edit'}}</button>
                 }
 
             </div>
