--- a/client/src/features/members/member-profile/member-profile.html
+++ b/client/src/features/members/member-profile/member-profile.html
@@ -21,9 +21,51 @@
 
         @if(memberService.editMode())
         {
-            <div>
-                Profile form goes here !!!
-            </div>
+            <form #editForm="ngForm" (ngSubmit) = "updateProfile()" class="flex flex-col w-full gap-4" >
+               
+                <label for="" class="floating-label">
+                <span>Display Name</span>
+                <input 
+                    class="input w-full"
+                    name="displayName" 
+                    [(ngModel)] = "editableMember.displayName"
+                    placeholder="Display name">
+               </label>
+
+               <label for="" class="floating-label">
+                <span>Description</span>
+                <textarea 
+                    class="textarea w-full"
+                    name="description" 
+                    [(ngModel)] = "editableMember.description"
+                    placeholder="Description"></textarea>
+               </label>
+
+               <label for="" class="floating-label">
+                <span>City</span>
+                <input 
+                    class="input w-full"
+                    name="city" 
+                    [(ngModel)] = "editableMember.city"
+                    placeholder="City">
+               </label>
+
+               <label for="" class="floating-label">
+                <span>Country</span>
+                <input 
+                    class="input w-full"
+                    name="country" 
+                    [(ngModel)] = "editableMember.country"
+                    placeholder="Country">
+               </label>
+
+               <div class="flex self-end">
+
+                    <button type="submit" class="btn btn-success">Submit</button>
+
+               </div>
+
+            </form>
         }@else{
             {{ member.description }}
         }
